--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,10 +22,8 @@ jobs:
       fail-fast: false
       matrix:
         os:
-          - macos-12
           - ubuntu-22.04
         emacs-version:
-          - '27.2'
           - '28.2'
         target:
           - ""
@@ -44,7 +42,7 @@ jobs:
 
       - name: Install tree-sitter CLI
         run: npm install -g tree-sitter-cli@0.19.3
-
+      - run: whoami
       # Using a specific commit hash to fix this https://github.com/purcell/setup-emacs/issues/24.
       - uses: purcell/setup-emacs@b56a75706e31e22d474357c77fb25ce73be2973a
         if: runner.os != 'Windows'
@@ -61,7 +59,6 @@ jobs:
           $env:PATH = "$env:MSYS_PATH\usr\bin;" + $env:PATH
           pacman -S --noconfirm --needed mingw-w64-x86_64-emacs
           echo "$env:MSYS_PATH\mingw64\bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf-8 -Append
-
       - run: .github/script/setup-cask
       - run: cask install
 
